# vectrill

./: .gitignore  .pre-commit-config.yaml  BENCHMARKING_GUIDE.md  BENCHMARKS.md  BENCHMARK_README.md  Cargo.toml  Dockerfile.test  M0_CORE_ENGINE_SKELETON.md  M1_SEQUENCER_BATCHING.md  M2_PYTHON_INTEGRATION.md  M3_EXPRESSION_ENGINE.md  M4_QUERY_PLANNER.md  M6_STREAMING_SEMANTICS.md  MILESTONE_PLAN.md  PROJECT_COMPLETION_SUMMARY.md  README.md  STREAMING_USE_CASES.md  TEST_MATRIX.md  WINDOW_REFACTOR_MILESTONE.md  _config.yml  api.md  architecture.md  benchmark_requirements.txt  benchmark_results.csv  benchmark_results.json  comprehensive_benchmark_results.json  contributing.md  debug_actual_test.py  debug_col_error.py  debug_col_error2.py  debug_col_scope.py  debug_comprehensive_lag.py  debug_cumsum_detailed.py  debug_cumsum_window.py  debug_data_difference.py  debug_data_structure.py  debug_deterministic_lag.py  debug_exact_difference.py  debug_exact_test.py  debug_expr.py  (+59 more)
.github/workflows/: ci.yml  docs.yml  pages.yml  release.yml  spreadsheet-ci.yml
_layouts/: default.html
api/doc/: crates.js  settings.html
api/doc/search.index/: 0035c51ca736.js  00dee6663cc6.js  0533f1e6155d.js  076e6ad6df52.js  07f3a953e1be.js  09d9419ba9e5.js  14e2d62216b7.js  1782cc31241d.js  1db566276ac5.js  1e3996138f92.js  1fbb4acd453c.js  221fbfcd2437.js  2375e5f5ff04.js  23d276e6704e.js  29a902cfab99.js  2e70f7d2f841.js  346ecbbce330.js  40b666b176ad.js  44cd2f28f8f2.js  460c1ea45e60.js  47ac6d275234.js  4ced5fe44b29.js  4e0d22595339.js  52a662287b33.js  55150f27b49b.js  594aabd6ddac.js  67bc4c06d3ca.js  6c3049c6c7c8.js  6e627218ea72.js  73b55154a9fc.js  74829ec64279.js  752634b9118f.js  7e276dbc1acf.js  7e9cec2575db.js  7ec21cb659d9.js
api/doc/search.index/crateNames/: 21b7f6b5d52f.js
api/doc/search.index/function/: 4fb6dd91eb4c.js
api/doc/search.index/generic_inverted_index/: 6a6e51b37851.js
api/doc/search.index/name/: 57c5cd458e3c.js
api/doc/src/vectrill/: lib.rs.html
api/doc/vectrill/: all.html  constant.VERSION.html  index.html  sidebar-items.js  struct.RecordBatch.html  type.SchemaRef.html
api/doc/vectrill/connectors/: sidebar-items.js
api/doc/vectrill/error/: enum.VectrillError.html
api/doc/vectrill/expression/: index.html
api/doc/vectrill/metrics/: fn.get_global_metrics.html  fn.global_registry.html  fn.init.html  index.html  sidebar-items.js  struct.MetricsRegistry.html
api/doc/vectrill/operators/: index.html  sidebar-items.js
api/doc/vectrill/optimization/: sidebar-items.js
api/doc/vectrill/performance/: sidebar-items.js
api/doc/vectrill/planner/: index.html  sidebar-items.js
api/doc/vectrill/sequencer/: sidebar-items.js  struct.Sequencer.html
api/doc/vectrill/streaming/: index.html
benches/: operators.rs  realistic.rs  sequencer.rs
benchmarks/: benchmark_quick.py  benchmark_test.py
docs/: BENCHMARKS.md  IMPLEMENTATION_STATUS.md  M5_OPERATOR_FUSION.md  M7_CONNECTORS_WORKLOADS.md  M8_PERFORMANCE_ADVANCED.md  M9_WEB_UI_METRICS.md  PROJECT_PLAN.md  api.md  architecture.md  contributing.md  examples.md  getting-started.md  performance.md  spreadsheet_implementation_spec.md  spreadsheet_integration_plan.md
docs/api/doc/: help.html  src-files.js
docs/api/doc/search.index/: 001aa14087a7.js  02a5b5c1ecbf.js  04f234aade48.js  052455f5447c.js  0893605b168b.js  0d3e294b79c3.js  0dcc1e66ef20.js  11bff346138c.js  153e5d7bcef2.js  18c0b318083f.js  1a191524e3fc.js  1a597fd825c1.js  1e073b7ed266.js  1e7ebf8fce49.js  21582a60b4fe.js  (+34 more)
examples/: advanced.py  equity_pricing_framework.rs  excel_addin_prototype.rs  getting_started.py  google_sheets_integration.rs  iot_outlier_detection.rs  streaming.py  traffic_spike_detection.rs  weather_prediction_system.rs
python/vectrill/: __init__.py  dataframe.py  functions.py  query_planner.py  window.py  window_fix.py  window_new.py  window_working.py  wrapper.py
python/vectrill/_rust/: __init__.py  lib_rust.dylib
scripts/: release.py  run_e2e_tests.sh
spreadsheet/: .pre-commit-config.yaml  README.md  package.json  tsconfig.json
spreadsheet/api/: openapi.yaml
spreadsheet/scripts/: build-apps-script.sh  build-excel-addin.sh  setup-dev.sh
spreadsheet/src/: build.rs  excel_addin.rs  real_time.rs
spreadsheet/tests/unit/: test_spreadsheet_api.rs
src/: cli.rs  error.rs  lib.rs  main.rs
src/connectors/: file.rs  file_sink.rs  kafka.rs  memory.rs  mod.rs  sink.rs
src/expression/: compiler.rs  functions.rs  ir.rs  mod.rs  operators.rs  physical.rs  scalar_value.rs
src/ffi/: arrow_bridge.rs  mod.rs  sequencer.rs
src/ingestion/: mod.rs
src/memory/: buffer_pool.rs  mod.rs
src/metrics/: mod.rs  registry.rs  types.rs
src/operators/: aggregation.rs  filter.rs  map.rs  mod.rs  pipeline.rs
src/optimization/: expr_optimizer.rs  fusion.rs  mod.rs
src/performance/: counters.rs  mod.rs
src/planner/: compiler.rs  executor.rs  logical.rs  mod.rs  optimizer.rs  physical.rs
src/sequencer/: config.rs  heap.rs  mod.rs  optimized.rs
src/spreadsheet/: api.rs  data_bridge.rs  excel_addin.rs  google_sheets.rs  mod.rs  real_time.rs  templates.rs  utils.rs
src/streaming/: mod.rs  state.rs  watermark.rs  window.rs
src/transformations/: builtin.rs  mod.rs  registry.rs
src/web/: mod.rs  server.rs
src/web/static/: index.html
tests/: benchmark_framework.py  cross_reference.rs  e2e_advanced_features.rs  e2e_connectors.rs  e2e_connectors_comprehensive.rs  e2e_test.rs  sequencer_functional.rs  sequencer_optimization_benchmark.rs  sequencer_performance.rs  test_comprehensive.py
tests/data/: duplicate_keys.csv  large_dataset.csv  late_events.csv  out_of_order_events.csv  simple_events.csv
tests/e2e/: README.md  advanced_features.rs  connectors.rs  mod.rs
tests/e2e/fixtures/: data.rs  mod.rs
tests/fixtures/: data.csv
tests/python/: comprehensive_benchmark.py  test_basic.py  test_cross_reference.py  test_groupby.py  test_pandas_comprehensive.py  test_polars_alternatives.py  test_polars_cumsum.py  test_sequencer.py  test_streaming_use_cases.py  test_time_window.py
tests/rust/: sequencer_functional.rs
(+281 files in other folders)
