[package]
name = "vectrill"
version = "0.1.0"
edition = "2021"
description = "High-performance Arrow-native streaming engine with Python DSL and Rust execution core"
license = "MIT OR Apache-2.0"
repository = "https://github.com/FranekJemiolo/vectrill"
readme = "README.md"
keywords = ["streaming", "arrow", "polars", "data-engineering"]
categories = ["database", "data-structures"]

[lib]
name = "vectrill"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
arrow = "53"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Python bindings (for M2+)
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }

# Serialization (for plan transfer)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI (for M0)
clap = { version = "4.0", features = ["derive"], optional = true }

# Connectors (for M7)
csv = { version = "1.3", optional = true }
json = { version = "0.12", optional = true }
parquet = { version = "51", features = ["arrow"], optional = true }
rdkafka = { version = "0.36", features = ["ssl", "sasl"], optional = true }

# Performance (for M8)
criterion = { version = "0.5", optional = true }
pprof = { version = "0.13", features = ["flamegraph", "criterion"], optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"
proptest = "1.0"

[features]
default = []
python = ["pyo3"]
cli = ["clap"]
connectors-full = ["csv", "json", "parquet", "rdkafka"]
connectors-basic = ["csv", "json", "parquet"]
kafka = ["rdkafka"]
performance = ["criterion", "pprof"]

# Build extension module by default when building with maturin
extension-module = ["pyo3/extension-module"]

[[bin]]
name = "vectrill"
required-features = ["cli"]

# Benchmarks will be added in M8
# [[bench]]
# name = "sequencer"
# harness = false
# required-features = ["performance"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
