[package]
name = "vectrill"
version = "0.1.0"
edition = "2021"
description = "High-performance Arrow-native streaming engine with Python DSL and Rust execution core"
license = "MIT OR Apache-2.0"
repository = "https://github.com/FranekJemiolo/vectrill"
readme = "README.md"
keywords = ["streaming", "arrow", "polars", "data-engineering"]
categories = ["database", "data-structures"]

[lib]
name = "vectrill"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
# Arrow core
arrow = "53"
arrow-arith = "53"
arrow-array = "53"
arrow-buffer = "53"
arrow-cast = "53"
arrow-schema = "53"
arrow-select = "53"
arrow-string = "53"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization (for plan transfer)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Python bindings (for M2+)
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }

# Google Sheets dependencies (for Google Sheets integration)
[target.'cfg(not(windows))'.dependencies]
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"
url = "2.4"
serde_json = "1.0"

# Real-time processing dependencies
tokio-tungstenite = { version = "0.21", features = ["ws"] }
uuid = { version = "1.0", features = ["v4", "serde"], optional = true }

# Windows COM dependencies (for Excel add-in)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_Com", "Win32_System_Ole", "Win32_UI_WindowsAndMessaging"] }
widestring = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI (for M0)
clap = { version = "4.0", features = ["derive"], optional = true }

# Connectors (for M7)
csv = "1.3"
json = { version = "0.12", optional = true }
parquet = { version = "51", features = ["arrow"], optional = true }
rdkafka = { version = "0.36", features = ["ssl", "sasl"], optional = true }

# Performance utilities
once_cell = "1.19"

# Performance (for M8)
criterion = { version = "0.5", optional = true }
pprof = { version = "0.13", features = ["flamegraph", "criterion"], optional = true }

# Web UI (for M9)
axum = { version = "0.7", features = ["ws"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }
tokio-tungstenite = { version = "0.21", optional = true }
uuid = { version = "1.0", features = ["v4", "serde"], optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"
proptest = "1.0"
csv = "1.3"
rand = "0.10.1"

[features]
default = []
python = ["pyo3"]
cli = ["clap"]
connectors-full = ["json", "parquet", "rdkafka"]
connectors-basic = ["json", "parquet"]
kafka = ["rdkafka"]
performance = ["criterion", "pprof"]
web-ui = ["axum", "tower", "tower-http", "tokio-tungstenite", "uuid", "futures"]
spreadsheet = []

# Build extension module by default when building with maturin
extension-module = ["pyo3/extension-module"]

[[bin]]
name = "vectrill"
required-features = ["cli"]

# Build script
build = "spreadsheet/src/build.rs"

# Benchmarks
[[test]]
name = "e2e_advanced_features"
harness = false
required-features = ["performance"]

[[test]]
name = "e2e_connectors_comprehensive"
required-features = ["connectors-full"]

[[bench]]
name = "sequencer"
harness = false
required-features = ["performance"]

[[bench]]
name = "operators"
harness = false
required-features = ["performance"]

[[bench]]
name = "realistic"
harness = false
required-features = ["performance"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
