[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "vectrill"
version = "0.1.0"
description = "High-performance Arrow-native streaming engine with Python DSL and Rust execution core"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT OR Apache-2.0" }
authors = [
    { name = "Franek Jemiolo", email = "franek@example.com" }
]
keywords = ["streaming", "arrow", "polars", "data-engineering", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
]

# Dependencies will be added when M2 is implemented
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "hypothesis>=6.0",
]

[project.urls]
Homepage = "https://github.com/FranekJemiolo/vectrill"
Repository = "https://github.com/FranekJemiolo/vectrill"
Documentation = "https://github.com/FranekJemiolo/vectrill#readme"
Issues = "https://github.com/FranekJemiolo/vectrill/issues"

[tool.maturin]
module-name = "vectrill._rust"
python-source = "python"
strip = true

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
